--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">RemoteDigitizer</string>
 
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="enter_title">Please Enter the host IP:</string>
+    <string name="action_settings">設定</string>
+    <string name="enter_title">請在以下輸入框，輸入要連線的IP:</string>
     <string name="title_activity_pad">PadActivity</string>
     <string name="send_string">You sent: </string>
 </resources>
